--- a/src/app/views/results/results-scene.html
+++ b/src/app/views/results/results-scene.html
@@ -1,5 +1,5 @@
 <div id="web" x-mojo-element="WebView"></div>
-<div id="progress-body" class="hotspot-body">
+<div id="progress-body" class="hotspot-bg hotspot-body">
     <div id="progress-spinner" class="spinner" x-mojo-element="Spinner"></div>
     <div id="progress" x-mojo-element="ProgressPill"></div>
 </div>
