--- a/src/app/views/main/main-scene.html
+++ b/src/app/views/main/main-scene.html
@@ -1,4 +1,4 @@
-<div class="hotspot-body">
+<div class="hotspot-bg hotspot-body">
     <div id="info" class="title text">Finding closest AT&amp;T WiFi HotSpots...</div>
     <div id="spinner" class="spinner" x-mojo-element="Spinner"></div>
     <div id="failed" class="title text">FAILED!</div>
